# bmstest1

./: CMakeLists.txt  README.md  bms.c  init.c  kalman.c  limits.h  main.c  model.c  model.h
.github/: copilot-instructions.md
battery/: balancing.c  balancing.h  current_limits.c  current_limits.h  safety_checks.c
bmb3y/: bmb3y.c  bmb3y.h  crc.c  crc.h
bms/app/: bms.c  hardware_checks.c  hardware_checks.h  init.c  model.c  model.h
bms/app/battery/: balancing.c  balancing.h  current_limits.c  safety_checks.c  safety_checks.h
bms/app/calibration/: offline.c  offline.h
bms/app/estimators/: basic_count.c  ekf.c  ekf.h  estimators.h  fancy_count.c  kalman.c  kalman2.c  voltage_based.c
bms/app/monitoring/: counters.c  counters.h
bms/app/state_machines/: base.c  base.h  contactors.c  contactors.h  system.c  system.h
bms/config/: allocations.h  limits.h  pins.h  settings.h
bms/drivers/bmb3y/: bmb3y.c  bmb3y.h
bms/drivers/chip/: nvm.c  nvm.h  pwm.c  pwm.h  watchdog.c  watchdog.h
bms/drivers/comms/: duart.c  duart.h
bms/drivers/contactors/: contactors.c  contactors.h
bms/drivers/isospi/: isosnoop.c  isospi_master.c  isospi_master.h
bms/drivers/sensors/: ads1115.c  ads1115.h  ina228.c  ina228.h  internal_adc.c  internal_adc.h
bms/lib/: sampler.c  sampler.h
bms/protocols/hmi_serial/: hmi_serial.c  hmi_serial.h
bms/protocols/internal_serial/: internal_serial.c  internal_serial.h
bms/protocols/inverter/: byd_can.c  inverter.h
bms/sys/events/: events.c  events.h
bms/sys/time/: time.c  time.h
boards/: bms_rp2354b.h
debug/: counters.c  events.c  events.h
estimators/: basic_count.c  ekf.c  fancy_count.c  kalman.c  voltage_based.c
hw/: ads1115.c  ads1115.h  allocation.h  allocations.h  contactors.c  duart.c  duart.h  ina228.c  ina228.h  internal_adc.c  internal_adc.h  pins.h  pwm.c  pwm.h  time.c  time.h  watchdog.c  watchdog.h
hw/actuators/: contactors.c  contactors.h
hw/chip/: nvm.c  nvm.h  pwm.c  time.h  watchdog.c
hw/comms/: duart.c  hmi_serial.c  hmi_serial.h  internal_serial.c  internal_serial.h
hw/sensors/: ads1115.c  ads1115.h  ina228.c  ina228.h  internal_adc.c  internal_adc.h
inverter/: byd_can.c  inverter.h
isospi/: isosnoop.c  isosnoop.h  isosnoop.pio  isospi_master.c  isospi_master.h  isospi_master.pio
lib/: math.h  ringbuf.h
monitoring/: events.c  events.h
state_machines/: base.c  base.h  charging.c  charging.h  contactors.c  contactors.h  system.c
tests/: CMakeLists.txt  Dockerfile  physical_model.c  physical_model.h  run_tests.sh  test_contactors.c  test_low_voltage.c  test_soc.c
tests/include/: RP2350.h
tests/include/pico/: stdlib.h
util/: sampler.c  sampler.h
